# overwatch

./: .gitignore  Cargo.toml  README.md  main.rs
overwatch-config/: Cargo.toml
overwatch-core/: Cargo.toml
overwatch-ui/: Cargo.toml
overwatch-utils/: Cargo.toml
overwatch_core/: Cargo.toml
overwatch_core/src/: lib.rs  proxy.rs
scripts/: setup_cert.sh
src/: main.rs
