[package]
name = "overwatch-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = "0.22"
hyper-rustls = "0.26"
clap = { version = "4", features = ["derive"] }

